# linkedin_plugin

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.sh
.claude/agents/: message-drafter.md
.claude/skills/: funding-campaign.md  news-signal-outreach.md
.claude/skills/linkedin-outreach/: SKILL.md
campaigns/: _cortivo.md  ai-dev-pod.md  family-office-automation.md  funded-team-augment.md  hiring-first-engineer.md  non-tech-founder-mvp.md  recently-funded-non-tech.md  solo-founders-us.md  yc-accelerator-non-tech.md
docs/: HANDOFF_funding-import.md  HANDOFF_hiring-import.md  MANUAL_TEST_PLAN.md  MANUAL_TEST_RESULTS.md  PLAN.md
linkedin_agent/: bot_daemon.py  campaigns.py  cli.py  config.py  conversational.py  daily.py  db.py  drafter.py  enrichment.py  followup.py  funding_lookup.py  icp_scoring.py  poll.py  safety.py  send_window.py  telegram.py
linkedin_agent/adapters/: __init__.py  base.py  fake_adapter.py  playwright_adapter.py  unipile_adapter.py
scripts/: com.cortivo.linkedin-bot.plist.template  daily_outreach.sh  install_launchd.sh
tests/: conftest.py  fakes.py  test_acceptances.py  test_bot_daemon.py  test_conversational.py  test_daily.py  test_drafter.py  test_error_paths.py  test_followup.py  test_funding_import_cli.py  test_funding_lookup.py  test_healthcheck.py  test_hiring_import_cli.py  test_icp_scoring.py  test_poll.py  test_send_window.py  test_setup_sh.py  test_smoke.py  test_status.py  test_telegram_format.py  test_unipile_live.py
