[project]
name = "linkedin-agent"
version = "0.1.0"
description = "LinkedIn outreach agent driven by Claude Code"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.48",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "click>=8.1",
    "pydantic>=2.8",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "freezegun>=1.4",
]

[project.scripts]
linkedin-agent = "linkedin_agent.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure-function logic tests, no DB or network",
    "integration: subprocess CLI / DB / mocked external services",
    "slow: slow integration tests (e.g. setup.sh that creates a fresh venv)",
    "live: hits the real Unipile or Telegram API",
    "live_write: live test that produces side effects on real LinkedIn (invite/dm)",
]
# By default, exclude live + slow tests. Run with `pytest -m slow` or `-m live`.
addopts = "-m 'not live and not live_write and not slow'"
